tagging functionality, profile sidebar

--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="font-sans" lang="en">
+<html class="font-sans h-screen" lang="en">
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,9 +10,9 @@
         <!-- Tailwind -->
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body class="bg-amber-100">
+    <body class="bg-amber-100 h-full">
         <!-- Vue application -->
-        <div class="mx-40 my-4" id="app"></div>
+        <div class="h-full" id="app"></div>
         <!-- Application loader -->
         <script type="module" src="/src/main.js"></script>
     </body>
