--- a/client/index.html
+++ b/client/index.html
@@ -5,9 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Benjamin J. Smyth"/>
         <meta name="description" content="A professional portfolio belonging to Benjamin J. Smyth."/>
-        <link rel="icon" href="/public/favicon.ico"/>
+        <link rel="icon" href="/favicon.ico"/>
         <title>Ben Smyth | Portfolio</title>
-        <!-- Tailwind -->
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body class="bg-amber-100 h-full">
