--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
         <title>Ben Smyth | Portfolio</title>
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body class="bg-amber-100 h-full">
+    <body class="bg-zinc-800 h-full">
         <!-- Vue application -->
         <div class="h-full" id="app"></div>
         <!-- Application loader -->
