Implement searching, sorting

--- a/client/index.html
+++ b/client/index.html
@@ -1,32 +1,26 @@
 <!DOCTYPE html>
-<html class="font-sans h-screen" lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="author" content="Benjamin J. Smyth"/>
-        <meta name="description" content="A professional portfolio belonging to Benjamin J. Smyth."/>
-        <link rel="icon" href="/favicon.ico"/>
-        <title>Ben Smyth | Portfolio</title>
-        <script src="https://cdn.tailwindcss.com"></script>
-    </head>
-    <body class="bg-zinc-800 h-full">
-        <!-- Vue application -->
-        <div class="h-full" id="app"></div>
-        <!-- Application loader -->
-        <script type="module" src="/src/main.js"></script>
-    </body>
+<html id="html" lang="en" class="
+	font-sans h-screen
+">
+	<head id="head">
+			<meta id="charset" charset="UTF-8"/>
+			<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1">
+			<meta id="author" name="author" content="Ben J. Smyth"/>
+			<meta id="desc" name="description" content="A professional portfolio belonging to Ben J. Smyth."/>
+			<link id="favicon" rel="icon" href="/favicon.ico"/>
+			<title id="title">
+				Ben J. Smyth
+			</title>
+			<script id="tailwind-import"
+				src="https://cdn.tailwindcss.com">
+			</script>
+	</head>
+	<body id="body" class="
+		bg-slate-900 h-full
+	">
+		<script id="app-script" src="./src/main.js" type="module"></script>
+		<div id="app" class="
+			h-full
+		"></div>
+	</body>
 </html>
-
-<!-- Subtitles
-<h2>Origins</h2>
-<p>My interest in software engineering began while I was studying post-secondary music.</p>
-<p>At the time, I felt disappointed with the program I was enrolled in, while a slight interest towards programming often lingered in the back of my mind. I don't really recall what first committed me to learning; one day, the inspiration found me. I began teaching myself the very basics of HTML, CSS, and JavaScript. I followed <a class="link" href="https://www.theodinproject.com/"  target="_blank">The Odin Project<img class="new-window-icon" src="../images/open_in_new_icon_138327.svg" height="10rem"></a>closely; I built a few interesting projects.</p>
-<p>Eventually, I decided to complete missing high school prerequisites, and enrolled in Computer Science at the University of Guelph.</p>
-<hr class="h2-hr">
-<h2>Education</h2>
-<p>I don't really recall what first committed me to learning; one day, the inspiration found me. I began teaching myself the very basics of HTML, CSS, and JavaScript. I followed The Odin Project closely; I built a few interesting projects.</p>
-<p>Eventually, I decided to complete missing high school prerequisites, and enrolled in Computer Science at the University of Guelph.</p>
-<hr class="h2-hr">
-<h2>Prospects</h2>
-<p>My interest in software engineering began while I was studying post-secondary music.</p>
-<p>At the time, I felt disappointed with the program I was enrolled in, while a slight interest towards programming often lingered in the back of my mind. I don't really recall what first committed me to learning; one day, the inspiration found me. I began teaching myself the very basics of HTML, CSS, and JavaScript. I followed The Odin Project closely; I built a few interesting projects.</p> -->
