Use injection keys, fix typing for components

--- a/client/index.html
+++ b/client/index.html
@@ -18,7 +18,7 @@
 	<body id="body" class="
 		bg-slate-900 h-full
 	">
-		<script id="app-script" src="./src/main.js" type="module"></script>
+		<script id="app-script" src="./src/main.ts" type="module"></script>
 		<div id="app" class="
 			h-full
 		"></div>
